<resources>
    <string name="app_name">Partyeer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Common -->
    <string name="ok">OK</string>
    <string name="close">Close</string>


    <!-- Error -->
    <string name="error">Error</string>
    <string name="error_unknown">An unknown error has occurred.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="submit">Submit</string>
    <string name="breaking">Home</string>
    <string name="search">Search</string>
    <string name="bookmarks">New Party</string>
    <string name="profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_search_party">Search Party</string>
    <string name="title_create_party">Create Party</string>
    <string name="title_profile">Profile</string>
    <string name="party_logo">Party Logo</string>
    <string name="party_title">Party Title</string>
    <string name="party_concept">Concept</string>
    <string name="party_location">Location</string>
    <string name="party_start_time">Start Time</string>
    <string name="party_end_time">End Time</string>
    <string name="party_description">Description</string>
    <string name="publish">Publish</string>
    <string name="cancel">Cancel</string>

    <string name="picture_indicator">%1$d/%2$d</string>
    <string name="new_party">New Party</string>
    <string name="map">Open Map</string>
    <string name="refresh">Refresh</string>
    <string name="popular_parties">Popular Parties</string>
    <string name="happy_hours">Happy Hours</string>
    <string name="discount_parties">Discount Parties</string>
    <string name="elite_parties">Elite Parties</string>
    <string name="tag">tag</string>
    <string name="starts_at">Starts at</string>
    <string name="ends_at">Ends At</string>
    <string name="entry_fee">Entry Fee</string>
    <string name="description">Description :</string>
    <string name="location">Location</string>
    <string name="Maps">Maps</string>
    <string name="party_details">Party Details</string>
    <string name="invitee_list">Invitee List</string>
    <string name="follow">Follow</string>
    <string name="search_user">Search User</string>
    <string name="guest_list">Guest List</string>
    <string name="parties">Parties</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="tagged_parties">Tagged Parties</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="mail_address">Mail Address</string>
    <string name="party_address">Address</string>
    <string name="address_desc">Address</string>
    <string name="location_pick_pin">Location Pick Pin</string>
    <string name="end_time">End Time</string>
    <string name="user_profile">User Profile</string>


    <string-array name="party_concepts">
        <item>Electronica</item>
        <item>House</item>
        <item>Jazz</item>
        <item>Rock</item>
        <item>Techno</item>
    </string-array>

</resources>