<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:maxWidth="250dp"
            android:maxHeight="150dp"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/text_view_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="@+id/image_view_profile"
            app:layout_constraintStart_toStartOf="@+id/image_view_profile"
            app:layout_constraintTop_toBottomOf="@+id/image_view_profile"
            tools:text="Adnan BAL" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/follow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_profile_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_follower_count_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_profile_picture">


        <TextView
            android:id="@+id/text_view_party_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/parties"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_party_count_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/text_view_party_label"
            app:layout_constraintStart_toStartOf="@+id/text_view_party_label"
            app:layout_constraintTop_toBottomOf="@+id/text_view_party_label"
            app:layout_constraintVertical_bias="0.5"
            tools:text="500" />


        <TextView
            android:id="@+id/text_view_follower_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_party_label"
            app:layout_constraintEnd_toStartOf="@+id/text_view_following_count_label"
            app:layout_constraintStart_toEndOf="@+id/text_view_party_label"
            app:layout_constraintTop_toTopOf="@+id/text_view_party_label"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/text_view_follower_count_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_party_count_value"
            app:layout_constraintEnd_toEndOf="@+id/text_view_follower_count_label"
            app:layout_constraintStart_toStartOf="@+id/text_view_follower_count_label"
            tools:text="500" />


        <TextView
            android:id="@+id/text_view_following_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/following"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_follower_count_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_follower_count_label"
            app:layout_constraintVertical_bias="0.5"
            tools:text="Following" />

        <TextView
            android:id="@+id/text_view_following_count_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_party_count_value"
            app:layout_constraintEnd_toEndOf="@+id/text_view_following_count_label"
            app:layout_constraintStart_toStartOf="@+id/text_view_following_count_label"
            tools:text="500" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_attending_parties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_follower_count_details" />
</androidx.constraintlayout.widget.ConstraintLayout>






